# backend/src/meet/dto/create.vote.dto.ts
@@ -1,0 +1,4 @@
+export class CreateVoteDto {
+  createdBy: number;
+  locationId: number;
+}
